Integrating Stipe Payment

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -30,3 +30,21 @@ SUBSCRIPTION_REQUIRED=true
 
 # Application URL (used for invitation links, webhooks, etc.)
 APP_URL=http://localhost:5173
+
+# Stripe Payment Configuration
+# =============================================
+
+# Stripe Secret Key (starts with sk_live_ or sk_test_)
+STRIPE_SECRET_KEY=sk_test_xxx
+
+# Stripe Webhook Secret (starts with whsec_)
+# Get this from Stripe Dashboard > Developers > Webhooks
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+
+# Stripe Price IDs for each tier
+# Create these products/prices in Stripe Dashboard
+STRIPE_PRICE_SOLO=price_xxx
+STRIPE_PRICE_PRO=price_xxx
+STRIPE_PRICE_PRO_PLUS=price_xxx
+STRIPE_PRICE_AGENCY=price_xxx
+STRIPE_PRICE_BRAND_BOLT=price_xxx
