--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
@@ -23,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.11.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "stripe": "^20.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
