--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,13 @@
   ],
   "functions": {
     "api/stripe/webhook.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
+    }
+  },
+  "api": {
+    "bodyParser": {
+      "sizeLimit": "1mb"
     }
   }
 }
