--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,14 @@ FRONTEND_URL=http://localhost:5173
 # Stripe (Backend)
 STRIPE_SECRET_KEY=sk_test_your_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_PRICE_SOLO=price_xxx
+STRIPE_PRICE_PRO=price_xxx
+STRIPE_PRICE_PRO_PLUS=price_xxx
+STRIPE_PRICE_AGENCY=price_xxx
+
+# Marketing Site Integration
+API_SECRET_KEY=your-secret-key-here
+MARKETING_SITE_URL=https://www.woozysocials.com
 
 # Environment
 NODE_ENV=development
